pricing issue on mobile

--- a/static/css/mobile-style.css
+++ b/static/css/mobile-style.css
@@ -47,7 +47,7 @@
     }
 
     .pricing-content {
-        height: auto;
+        height: 100%;
     }
 
     .pricing-section {
